statics/styles/style.css
/* ... */
#lightbox-loading
{
    position: absolute;
}

#lightbox-image
{
    position: absolute;
    padding: 10px;
}

#lightbox-prev,
#lightbox-next
{
    display: block;
    height: 100%;
    opacity: 0;
    width: 50%;
}

#lightbox-prev
{
    background: url('../images/lightbox_prev.png') left center no-repeat;
    left: 0;
    float: left;
}

#lightbox-next
{
    background: url('../images/lightbox_next.png') right center no-repeat;
    right: 0;
    float: right;
}

#lightbox-prev:hover,
#lightbox-next:hover
{
    opacity: 1;
}

#lightbox-navigation
{
    height: 100%;
    left: 0;
    position: relative;
    top: 0;
    width: 100%;
    z-index: 10000;
}

#lightbox-details
{
    background: #FFFFFF;
    font-size: 0.8em;
    line-height: 1.4em;
    margin: 0 auto;
    overflow: auto;
    padding: 0 10px 0;
    width: 100%;
}

#lightbox-details
{
    color: #666666;
    padding: 0 10px;
    position: relative;
}

#lightbox-caption
{
    font-weight: bolder;
}

#lightbox-page
{
    display: block;
    clear: left;
    padding-bottom: 1.0em;
}

#lightbox-close
{
    background: url('../images/lightbox_close.png');
    height: 22px;
    position: absolute;
    right: 10px;
    top: 10px;
    width: 66px;
}

#sidebar-personal-toggle,
#sidebar-personal-toggle.active,
.chat-title button,
.chat-title span,
.chat-title span.online,
.pager .first,
.pager .first-disabled,
.pager .last,
.pager .last-disabled,
.pager .prev,
.pager .prev-disabled,
.pager .next,
.pager .next-disabled,
#chat,
#marquee span,
#sidebar-personal,
#form-sidebar-login,
#form-sidebar-register,
#navigation,
#footer-content,
#header .online,
#header .browsered,
#logo,
#chat-friend-list-search,
#search button,
.index-latest-box h4,
.index-forums-box h4,
#notfound a,
#notfound a:hover,
#index-calendar .calendar-bottom-wrapper
{
    background: url('../images/sprites.png') no-repeat;
}

#readme-fresh,
#fresh-back,
#readme-notice,
#notice-back,
#readme-reschool,
#reschool-back,
#readme-download,
#download-back,
#readme-body,
#freshman-1,
#freshman-2,
#freshman-3,
#freshman-4,
#reschool-1,
#reschool-2,
#reschool-3,
#reschool-4,
#notice-1,
#notice-2,
#notice-3,
#notice-4,
#readme-logo1,
#readme-logo2,
#readme-logo3,
#readme-logo4
{
    background: url('../images/readme.png') no-repeat;
}

/**
 * Layout style
 */
#logo,
#moon
{
    background-position: -960px 0;
    display: block;
    height: 160px;
    position: absolute;
    text-indent: -100000%;
    width: 240px;
}

#moon
{
    background: url('../images/moon.png') -640px -800px no-repeat;
    margin-left: 15px;
    width: 160px;
}

#header
{
    height: 240px;
}

#header .statics
{
    margin: 15px 0 0 240px;
    position: absolute;
}

#header .statics p
{
    color: #FFDD00;
    float: left;
    font-family: Consolas, Courier New, monospace;
    font-size: 1.1em;
    height: 16px;
    line-height: 16px;
    margin: 0;
    padding: 4px 0 4px 85px;
    width: 45px;
}

#header .online
{
    background-position: -1200px 0;
}

#header .browsered
{
    background-position: -1200px -32px;
}

#menu
{
    list-style: none;
    margin: 120px 0 0 400px;
    overflow: hidden;
    padding: 0;
    position: absolute;
}

#menu li
{
    background: #E1E5EE;
    border-radius: 15px;
    float: left;
    height: 20px;
    line-height: 20px;
    margin: 0 10px;
    padding: 2px 10px;
    text-align: center;
}

#menu a
{
    color: #414141;
}

#navigation
{
    background-position: 0 -1216px;
    list-style: none;
    margin: 160px 0 0 0;
    padding: 0 15px;
    position: absolute;
    width: 800px;
}

#navigation li
{
    float: left;
    height: 60px;
    line-height: 60px;
    text-align: center;
    width: 110px;
}

#navigation a
{
    color: #210530;
    font-weight: bolder;
}

#navigation li.active a
{
    color: #EEFFCC;
}

#navigation a:hover,
#navigation li.active a:hover
{
    color: #FFFFFF;
}

#navigation ul
{
    background: #DAE3EC;
    background: rgba(170, 190, 215, 0.9);
    border-radius: 0 0 15px 15px;
    list-style: none;
    margin: -16px 0 0 10px;
    padding: 0 0 8px;
    position: relative;
    visibility: hidden;
    width: 100px;
    z-index: 5000;
}

#navigation ul li
{
    float: none;
    height: 30px;
    line-height: 30px;
    padding: 4px 0;
    width: 100px;
}

#navigation ul a,
#navigation li.active ul a
{
    color: #000A3C;
}

#navigation ul a:hover,
#navigation li.active ul a:hover
{
    color: #EEFFFF;
}

#navigation li:hover ul
{
    visibility: visible;
}

#content
{
    float: left;
    padding: 0 25px;
    width: 750px;
}

#footer
{
    clear: both;
}

#footer-background
{
    background: url('../images/footer.png') repeat-x center;
    height: 120px;
    left: 0;
    position: absolute;
    width: 100%;
}

#footer-content
{
    background-position: 0 -1088px;
    height: 120px;
    margin: 0 auto;
    width: 800px;
}

#footer p
{
    font-size: 0.85em;
    margin: 0;
    padding: 0;
    position: relative;
    right: 30px;
    text-align: center;
    top: 80px;
}

/**
 * Sidebar style
 */
#sidebar
{
    float: right;
    margin: -240px -15px 0 15px;
    width: 200px;
}

#sidebar .profile
{
    margin: 15px 0;
    padding: 5px 5%;
}

#sidebar div.profile
{
    background: #FFFFFF;
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 10px;
}

#sidebar .profile .avatar
{
    background: #FFFFFF;
    background: rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    height: 120px;
    margin: 5px 0;
    width: 180px;
}

#sidebar .avatar img
{
    margin: 0 10px;
    width: 160px;
}

#sidebar .profile p
{
    height: 42px;
    line-height: 42px;
    margin: 3px 0;
    padding: 3px;
    text-align: center;
}

#sidebar form.profile dl
{
    margin: 0;
    width: 90%;
}

#sidebar form.profile input,
#sidebar form.profile label
{
    height: 20px;
    line-height: 20px;
}

#sidebar form.profile div
{
    text-align: center;
    width: auto;
}
/* ... */

